--- a/model_025_deconv_norm.ipynb
+++ b/model_025_deconv_norm.ipynb
@@ -6,7 +6,7 @@
       "name": "model_025_deconv_norm.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNMGIJjacGZ4TZbFo+QxhZT",
+      "authorship_tag": "ABX9TyOeSn13SMdd2beMsID+HnFi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pXillfiDT9Sb"
+        "id": "pXillfiDT9Sb",
+        "outputId": "f1a1c503-f6b4-4de6-bdd5-2a1d90e3491c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 378
+        }
       },
       "source": [
         "#!/usr/bin/env python\r\n",
@@ -232,7 +237,7 @@
         "                # print \"\"\r\n",
         "\r\n",
         "            if (epoch != 0) and (epoch % 1 == 0):\r\n",
-        "                print \"Save epoch \" + str(epoch)\r\n",
+        "                print (\"Save epoch \" + str(epoch))\r\n",
         "                saver.save(sess, \"velodyne_025_deconv_norm\" + str(epoch) + \".ckpt\")\r\n",
         "        print(\"Optimization Finished!\")\r\n",
         "\r\n",
@@ -288,20 +293,20 @@
         "        objectness = sess.run(objectness, feed_dict={voxel: voxel_x, phase_train:False})[0, :, :, :, 0]\r\n",
         "        cordinate = sess.run(cordinate, feed_dict={voxel: voxel_x, phase_train:False})[0]\r\n",
         "        y_pred = sess.run(y_pred, feed_dict={voxel: voxel_x, phase_train:False})[0, :, :, :, 0]\r\n",
-        "        print objectness.shape, objectness.max(), objectness.min()\r\n",
-        "        print y_pred.shape, y_pred.max(), y_pred.min()\r\n",
+        "        print (objectness.shape, objectness.max(), objectness.min())\r\n",
+        "        print (y_pred.shape, y_pred.max(), y_pred.min())\r\n",
         "\r\n",
         "        # print np.where(objectness >= 0.55)\r\n",
         "        index = np.where(y_pred >= 0.995)\r\n",
-        "        print np.vstack((index[0], np.vstack((index[1], index[2])))).transpose()\r\n",
-        "        print np.vstack((index[0], np.vstack((index[1], index[2])))).transpose().shape\r\n",
+        "        print (np.vstack((index[0], np.vstack((index[1], index[2])))).transpose())\r\n",
+        "        print (np.vstack((index[0], np.vstack((index[1], index[2])))).transpose().shape)\r\n",
         "\r\n",
         "        a = center_to_sphere(places, size, resolution=resolution, x=x, y=y, z=z, \\\r\n",
         "            scale=scale, min_value=np.array([x[0], y[0], z[0]]))\r\n",
         "        label_center = sphere_to_center(a, resolution=resolution, \\\r\n",
         "            scale=scale, min_value=np.array([x[0], y[0], z[0]]))\r\n",
         "        label_corners = get_boxcorners(label_center, rotates, size)\r\n",
-        "        print a[a[:, 0].argsort()]\r\n",
+        "        print (a[a[:, 0].argsort()])\r\n",
         "        # center = np.array([20, 57, 3])\r\n",
         "        #\r\n",
         "        # pred_center = sphere_to_center(center, resolution=resolution)\r\n",
@@ -312,8 +317,8 @@
         "        centers = sphere_to_center(centers, resolution=resolution, \\\r\n",
         "            scale=scale, min_value=np.array([x[0], y[0], z[0]]))\r\n",
         "        corners = cordinate[index].reshape(-1, 8, 3) + centers[:, np.newaxis]\r\n",
-        "        print corners.shape\r\n",
-        "        print voxel.shape\r\n",
+        "        print (corners.shape)\r\n",
+        "        print (voxel.shape)\r\n",
         "        # publish_pc2(pc, corners.reshape(-1, 3))\r\n",
         "        publish_pc2(pc, label_corners.reshape(-1, 3))\r\n",
         "        # pred_corners = corners + pred_center\r\n",
@@ -370,7 +375,7 @@
         "\r\n",
         "            # print center_sphere\r\n",
         "            if not center_sphere.shape[0]:\r\n",
-        "                print 1\r\n",
+        "                print (1)\r\n",
         "                continue\r\n",
         "            g_map = create_objectness_label(center_sphere, resolution=resolution, x=(x[1] - x[0]), y=(y[1] - y[0]), z=(z[1] - z[0]), scale=scale)\r\n",
         "            g_cord = corner_label.reshape(corner_label.shape[0], -1)\r\n",
@@ -396,8 +401,22 @@
         "            scale=4, voxel_shape=(360, 400, 40), x=(0, 90), y=(-50, 50), z=(-5.5, 4.5))\r\n",
         "    # test(1, pcd_path, label_path=label_path, resolution=0.1, calib_path=calib_path, dataformat=\"bin\", is_velo_cam=True, scale=8, voxel_shape=(800, 800, 40))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-4-eb88af7aa6f1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtensorflow\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0minput_velodyne\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mglob\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'input_velodyne'",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ]
+        }
+      ]
     }
   ]
 }
